Añadido DLL y decodificacion mazos
Se ha añadido el DLL proporcionado por Riot para deocidificar los codigos de los mazos y se ha añadido un pequeño ejemplo de uso en Form1

--- a/LoRunaterra-Decktracker/LoRunaterra-Decktracker.csproj
+++ b/LoRunaterra-Decktracker/LoRunaterra-Decktracker.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{696B04BE-042C-476F-8764-5D6E868C8B13}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>LoRunaterra_Decktracker</RootNamespace>
     <AssemblyName>LoRunaterra-Decktracker</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -32,7 +32,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LoRDeckCodes">
+      <HintPath>..\..\LoRDeckCodes-master\LoRDeckCodes\bin\Debug\net461\LoRDeckCodes.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
