Logica de buscar partida, jugar partida y acabar partida añadido.

--- a/LoRunaterra-Decktracker/LoRunaterra-Decktracker.csproj
+++ b/LoRunaterra-Decktracker/LoRunaterra-Decktracker.csproj
@@ -65,6 +65,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Global\ActiveDeck.cs" />
+    <Compile Include="Global\GameResult.cs" />
     <Compile Include="InicioForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,6 +109,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Exception\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
