Se escribe y se lee  JSON

--- a/LoRunaterra-Decktracker/LoRunaterra-Decktracker.csproj
+++ b/LoRunaterra-Decktracker/LoRunaterra-Decktracker.csproj
@@ -72,6 +72,7 @@
     <Compile Include="InicioForm.Designer.cs">
       <DependentUpon>InicioForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Global\JsonServices.cs" />
     <Compile Include="Mazos.cs">
       <SubType>Form</SubType>
     </Compile>
